@@ -14,10 +14,10 @@ int setup_hashing_algorithm(state *s)
   s->hash_finalize      = hash_final_md5;
   
   s->h_plain = s->h_bsd = s->h_ilook = s->h_md5deep_size = 1;
-  s->h_ilook3 = 255;
-  s->h_hashkeeper = 4;
-  s->h_nsrl15 = 6;
-  s->h_nsrl20 = 1;
+  s->h_ilook3 = 1;
+  s->h_hashkeeper = 5;
+  s->h_nsrl15 = 7;
+  s->h_nsrl20 = 2;
   s->h_encase = 1;
   
   s->hash_context = (context_md5_t *)malloc(sizeof(context_md5_t));
