@@ -12,7 +12,7 @@ int setup_hashing_algorithm(state *s)
   s->hash_finalize      = hash_final_sha1;
   
   s->h_plain = s->h_bsd = s->h_md5deep_size = 1;      
-  s->h_ilook3 = 1;
+  s->h_ilook3 = 2;
   s->h_ilook = s->h_hashkeeper = 0;
   s->h_nsrl15 = 1;
   s->h_nsrl20 = 1;
